# fast_semigroup_homology

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_upload.yml  run_python_package_tests.yml  test_build_publish.yml
fast_monoid_homology/: cover_submodule.py  find_generating_subset.py  homology.py  kernels.py  normalized_invariants.py  projective_resolution.py
fast_semigroup_homology/: __init__.py  __main__.py  find_generating_subset.py  handle_hd5f.py  homology.py  kernels.py  projective_resolution.py  refine_hdf5.py
results/: README.md
results/monoids_no_monoid_1sided_ideals_by_min_ideal_and_diagonal_and_units/: maxorder10_maxdim5.hdf5  maxorder10_maxdim5.md  maxorder11_maxdim4.hdf5  maxorder11_maxdim4.md  maxorder8_maxdim12.hdf5  maxorder8_maxdim12.md  maxorder9_maxdim8.hdf5  maxorder9_maxdim8.md
results/monoids_no_monoid_1sided_ideals_by_min_ideal_and_diagonal_and_units_bounded_qdiag/: maxorder11_maxdim7.hdf5  maxorder11_maxdim7.md  maxorder12_maxdim6.hdf5  maxorder12_maxdim6.md  maxorder14_maxdim5.hdf5  maxorder14_maxdim5.md  maxorder15_maxdim4.hdf5  maxorder15_maxdim4.md  maxorder16_maxdim3.hdf5  maxorder16_maxdim3.md
results/semigroups_by_diagonal_and_min_ideal/: maxorder7_maxdim12.hdf5  maxorder7_maxdim12.md  maxorder8_maxdim8.md
test/: test_find_generating_subset.py  test_homology.py  test_kernels.py  test_normalized_invariants.py  test_projective_resolution.py
